media/tdarr/tdarr-ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: tdarr-ingressroute
  namespace: tdarr
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`tdarr.ltc.tsphotoclicks.net`)
      services:
        - name: tdarr-ui
          port: 8265
  tls:
    secretName: sabnzbd-internal-secret
---
apiVersion: v1
kind: Service
metadata:
  name: tdarr-ui
  namespace: tdarr
spec:
  type: LoadBalancer
  selector:
    app: tdarr
  ports:
    - port: 8265
      targetPort: 8265
---
apiVersion: v1
kind: Service
metadata:
  name: tdarr-server
  namespace: tdarr
spec:
  selector:
    app: tdarr
  ports:
    - port: 8266
      targetPort: 8266
